# spark-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_cache_test.py
docs/: IMPLEMENTATION_PLAN.md  INSTALL.md  LOCAL_MODELS.md  ROADMAP.md
examples/: basic_agent.py
scripts/: install.sh
spark_agent/: __init__.py  cli.py  config.py  session.py
spark_agent/core/: __init__.py  approval.py  context_packer.py  executor.py  model_adapter.py  prompt_engine.py  provider.py  repo_index.py  sandbox.py  streaming.py  tool_validation.py  types.py
spark_agent/tools/: __init__.py  codebase.py  workspace.py
spark_agent/ui/: __init__.py  terminal.py
tests/: test_approval.py  test_cli.py  test_codebase_tools.py  test_config.py  test_context_packer.py  test_executor.py  test_model_adapter.py  test_prompt_engine.py  test_provider.py  test_repo_index.py  test_sandbox.py  test_session.py  test_streaming.py  test_terminal_ui.py  test_tool_validation.py  test_workspace_tools.py
